07_test_hostname/02_test_hostname_with_ingress_on_linode/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: ClusterIP
  selector:
    app: test
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
