07_test_hostname/02_test_hostname_with_ingress_on_linode/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-new-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: demo1.p82.it
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: test-service
                port:
                  number: 80
